# race_timer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/client/: main.cpp
src/server/: main.cpp  racetimer.cpp  racetimer.h
